# verilog-generator

./: CITATION.cff  CONTRIBUTING.md  ENGINEERING_DESIGN_GOALS.md  README-CN.md  README.md  RELEASE_RECEIPT.json  SECURITY.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/: rtl_md_constraints.json
assets/examples/: rtl_erie_verilog_spec.json
assets/interface_templates/: ahb_lite_config.vinc  apb_config.vinc  axi4_full_master.vinc  axi4_full_slave.vinc  axi4_lite_config.vinc  axi_stream_duplex.vinc  catalog.json
assets/refined_verilog_templates/: axi4_lite_csr_shell.vinc  axi_interconnect_port_groups.vinc  axis_ready_valid_slice.vinc  catalog.json  conv_load_store_pipeline.vinc  counter_state_bridge.vinc  equivalence_wrapper_probe.vinc  fsm_state_transition.vinc  phase_output_registering.vinc  wrapper_top_stitching.vinc
assets/style_templates/: rtl_bus_grouping.tpl  rtl_fsm.tpl  (+3 more)
config/: defaults.json
evals/: evals.json
integration/: __init__.py  verilog_adapter.py
references/: asic-verilog-quality.md  capability-distillation-checklist.md  configuration.md  erie-ref-style.md  integration.md  lint-checklist.md  rtl-md-constraints.md  skill-standards.md  testbench-patterns.md  verilog-comment-placement.md  verilog-template-patterns.md  workflow-contracts.md
runtime/: __init__.py
scripts/: manage_skill_dependencies.py  preflight_verilog_toolchain.py  remote_validate_verilog_skill.py  tb_generator.py  validate_verilog_skill.py  verilog_lint.py
smoke/: dependency_gates.py  effectiveness_gates.py  run_smoke.py  shared.py  toolchain_gates.py
(+97 files in other folders)
