[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verilog-generator-skill"
version = "0.1.2"
description = "Agent-usable Codex skill for Verilog-2001 RTL generation workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Jiyuan Liu", email = "erie@seu.edu.cn" }]
keywords = ["codex-skill", "agent-skill", "verilog", "rtl", "fpga", "hardware-generation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://github.com/Eriemon/verilog-generator"
Repository = "https://github.com/Eriemon/verilog-generator"

[project.scripts]
verilog-gen = "runtime.verilog_generator.cli:main"

[tool.setuptools.packages.find]
include = ["runtime*", "integration*"]

[tool.setuptools.package-data]
"config" = ["defaults.json"]
